introduce api implementation for in-memory database
