# src/api/swagger/swagger.yaml
@@ -19,7 +19,7 @@ paths:
       description: Returns list of applications
       tags:
         - Applications
-      operationId: getApplications
+      operationId: getAllApplications
       responses:
         "200":
           description: Success
@@ -42,6 +42,8 @@ paths:
           description: Success
           schema:
             $ref: "#/definitions/Application"
+        "409":
+          description: Application with this id already exists
   /applications/{id}:
     x-swagger-router-controller: application-controller
     get:
